--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -202,7 +202,7 @@
         .admin-container .admin-container-iframe {
             position: absolute;
             width: 100%;
-            height: 100%;
+            /*height: 100%;*/
             top: 40px;
             left: 0;
             bottom: 0;
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                     <div class="admin-container-iframe">
-                        <iframe class="" :src="currentNav.routerPath"></iframe>
+                        <iframe class="admin-body" :src="currentNav.routerPath"></iframe>
                     </div>
                 </div>
 
