--- a/templates/admin/register.html
+++ b/templates/admin/register.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="/static/images/icons/favicon.ico"/>
     <link rel="bookmark" href="/static/images/icons/favicon.ico"/>
     <link rel="stylesheet" href="/static/plugins/zui/css/zui.css">
+    <link rel="stylesheet" href="/templatesJs/admin/css/style.css">
     <style>
         .login-container {
             position: fixed;
