查询超级管理员列表，展示表格，分页展示

--- a/templates/admin/setting/manager.html
+++ b/templates/admin/setting/manager.html
@@ -26,7 +26,10 @@
 <div id="app">
     <transition name="appShow">
         <div v-show="appShow" class="container-fluid">
-            <div id="datagridContent" class="datagrid"></div>
+            <div id="datagridContent" class="datagrid">
+                <div class="datagrid-container"></div>
+                <div class="pager"></div>
+            </div>
         </div>
     </transition>
 </div>
