--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -236,6 +236,9 @@
                 justify-content: end;
                 align-items: center;
             }
+            .g-nav-bar .g-logo a {
+                width: unset;
+            }
             .admin-container, .admin-footer {
                 left: 0;
             }
