--- a/templates/admin/setting/menu.html
+++ b/templates/admin/setting/menu.html
@@ -146,7 +146,7 @@ border-radius: 2px;cursor: pointer;"></em>
                     </div>
                 </div>
             </div>
-            <!-- 编辑分组 -->
+            <!-- 选择图标 -->
             <div class="modal fade" id="icons">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
