--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -61,6 +61,10 @@
         .g-sidebar ul li .g-title {
             border-left: 4px solid #37474f;
         }
+        .g-sidebar ul li .g-title:hover {
+            background-color: rgba(34, 136, 136, .2);
+            border-left: 4px solid rgba(34, 136, 136, .1);
+        }
         .g-sidebar ul .g-active .g-title {
             background-color: rgba(0, 0, 0, .3);
             border-left: 4px solid #228888;
