--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -81,6 +81,7 @@
                 if (res.code === '000') {
                     console.log(res);
                     window.localStorage.setItem('express_token', res.data.token);
+                    window.localStorage.setItem('user.id', res.data.id);
                     window.location = '/admin'
                 }
             }
