首页显示查询到的用户头像和昵称

--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -42,14 +42,14 @@
             <div class="row">
                 <div class="input-group">
                     <span class="input-group-addon">账号</span>
-                    <input type="text" class="form-control account" placeholder="账号">
+                    <input type="text" class="form-control account" placeholder="账号" value="admin">
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="input-group">
                     <span class="input-group-addon">密码</span>
-                    <input type="password" class="form-control password" placeholder="密码">
+                    <input type="password" class="form-control password" placeholder="密码" value="888888">
                 </div>
             </div>
             <br>
