--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -262,8 +262,8 @@
                     </div>
                     <div class="float-right other-info">
                         <div class="btn-group">
-                            <img class="user_icon" src="/static/images/icons/user_icon.png" alt="">
-                            <span style="cursor: pointer;" class="dropdown-toggle" data-toggle="dropdown">区区电脑 <span class="caret"></span></span>
+                            <img class="user_icon" :src="myInfo.avatar" alt="">
+                            <span style="cursor: pointer;" class="dropdown-toggle" data-toggle="dropdown">{{ myInfo.nickname }} <span class="caret"></span></span>
                             <ul class="dropdown-menu pull-right" role="menu">
                                 <li><a href="###">操作</a></li>
                                 <li><a href="###">账号设置</a></li>
