--- a/templates/admin/setting/manager.html
+++ b/templates/admin/setting/manager.html
@@ -66,8 +66,8 @@
                                 <div class="form-group">
                                     <label class="col-sm-2">昵称：</label>
                                     <div class="col-sm-8">
-                                        <input v-if="userId != 1" type="text" class="form-control" v-model="currentItem.nickname" readonly>
-                                        <input v-if="userId == 1" type="text" class="form-control" v-model="currentItem.nickname">
+                                        <input type="text" class="form-control" v-model="currentItem.nickname" readonly>
+                                        <!--<input v-if="userId == 1" type="text" class="form-control" v-model="currentItem.nickname">-->
                                     </div>
                                 </div>
                                 <div class="form-group">
