--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -266,7 +266,7 @@
                             <span style="cursor: pointer;" class="dropdown-toggle" data-toggle="dropdown">{{ myInfo.nickname }} <span class="caret"></span></span>
                             <ul class="dropdown-menu pull-right" role="menu">
                                 <li><a href="###">操作</a></li>
-                                <li><a href="###">账号设置</a></li>
+                                <li><a data-iframe="/admin/set-account" data-toggle="modal">账号设置</a></li>
                                 <li class="divider"></li>
                                 <li @click="logout"><a href="###">退出</a></li>
                             </ul>
