--- a/templates/admin/setting/account.html
+++ b/templates/admin/setting/account.html
@@ -21,6 +21,7 @@
     .edit img {
       width: 100px;
       height: 100px;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -35,7 +36,7 @@
         </div>
         <div class="form-group">
           <label class="col-sm-2">头像：</label>
-          <div class="col-sm-8"><img :src="myInfo.avatar" :alt="myInfo.nickname"></div>
+          <div class="col-sm-8"><img :src="myInfo.avatar" :alt="myInfo.nickname" @click="avatarDidClick"></div>
         </div>
         <div class="form-group">
           <label class="col-sm-2">账号：</label>
