--- a/templates/ff-ui.html
+++ b/templates/ff-ui.html
@@ -9,10 +9,11 @@
   <link rel="stylesheet" href="/static/plugins/ff-ui/ff-ui.css">
 </head>
 <body>
-<button onclick="showAlert('success', 'top')">成功</button>
-<button onclick="showAlert('error', 'center')">失败</button>
-<button onclick="showAlert('warning', 'bottom')">警告</button>
-<button onclick="showAlert('normal', 'bottom')">普通</button>
+<div class="ff-button ff-button-success" onclick="showAlert('success', 'top')">成功</div>
+<div class="ff-button ff-button-error" onclick="showAlert('error', 'center')">失败</div>
+<div class="ff-button ff-button-warning" onclick="showAlert('warning', 'bottom')">警告</div>
+<div class="ff-button ff-button-primary" onclick="showAlert('normal', 'bottom')">普通</div>
+<div class="ff-button" onclick="showConfirm()">普通</div>
 </body>
 <script type="text/javascript" src="/static/plugins/ff-ui/ff-ui.js"></script>
 <script>
@@ -20,6 +21,19 @@
         $FFUI.alert({
             type: type,
             // position: position
+        })
+    }
+    function showConfirm() {
+        $FFUI.confirm({
+            cover: true,
+            callback: function (r) {
+                console.log(r);
+                $FFUI.alert({
+                    message: r,
+                    type: $FFUI.Alert.AlertType.success,
+                    position: $FFUI.Alert.AlertPosition.center
+                })
+            }
         })
     }
 </script>
